<resources>
    <string name="FHD">FHD</string>
    <string name="H265_HD">H265 HD</string>
    <string name="H265_SD">H265 SD</string>
    <string name="HD">HD</string>
    <string name="LD">LD</string>
    <string name="P_1080">1080P</string>
    <string name="P_1080_PLUS">1080P+</string>
    <string name="SD">SD</string>
    <string name="UD">UD</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_introduce">\t Dolit OTT is a favorite audio-visual platform for overseas Chinese. It has a large number of real-time updated movies and TV series in Europe, America, Japan, South Korea, Hong Kong and Taiwan, popular fashion variety shows and international mainstream MTV, as well as international information from different perspectives. Whether you are a large number of overseas students, overseas Chinese emigrating overseas, or compatriots of Hong Kong, Taiwan, Malaysia and Singapore, there are your bells here Love Chinese film and TV programs!</string>
    <string name="about_us_neutral">\t IPTV/OTT TV live on-demand system, support Android TV box system, Andriod/iOS mobile phone, tablet, Roku and other platforms</string>
    <string name="aboutus_version">current version:</string>
    <string name="access_authentication_information">Click to activate</string>
    <string name="account_active_failed_with_code">Account Active Failed, Error:</string>
    <string name="account_active_not_yet">Account Not Active Yet</string>
    <string name="account_agent_verify_failed">Account Verification Failed</string>
    <string name="account_forbidden">Your account has been disabled</string>
    <string name="account_has_actived">Account Active Succeed</string>
    <string name="account_number">Account Number:</string>
    <string name="account_using_now">Your account is used in another device .please quit the IPTV apps and login to new device after %dmins.</string>
    <string name="accounts_disabled_msg">The Account Has Been Disabled, Please Contact The Administrator!</string>
    <string name="activation_date">Activation Date:</string>
    <string name="active_biz_err_code_1001">Cannot Connect To The Server, Please Check Your Connection</string>
    <string name="active_biz_err_code_1002">Activation Failed, Response Parsing Error</string>
    <string name="active_biz_err_code_1003">Activation Failed, Server Data Validation Failed</string>
    <string name="active_biz_err_code_2001">Activation Failed, Network Request Error, Check Device Network Settings</string>
    <string name="active_biz_err_code_2002">Activation Failed, An Error Occurred During The Request, Please Try Again</string>
    <string name="active_biz_err_code_2003">Activation Failed, Network Request Failed, Please Check Your Network</string>
    <string name="active_email_send_failed">Active Email Send Failed</string>
    <string name="active_email_sended">Active Email Send Succeed</string>
    <string name="ad_app_setting">app setting</string>
    <string name="ad_back_home_page">back home</string>
    <string name="ad_close_dialog_tip">click back to close dialog</string>
    <string name="ad_exit_app">exit or not</string>
    <string name="ad_fail_load">Ad load failed!</string>
    <string name="ad_net_state_connected">Net Connected</string>
    <string name="ad_net_state_disconnected">Net Disconnected</string>
    <string name="ad_no_permission_open_settings">Permission Refused To Open Settings</string>
    <string name="ad_no_program_list_found">No Program List Found</string>
    <string name="ad_no_schedule_for_now">No Schedule For Now</string>
    <string name="ad_no_schedule_today">No Schedule Today</string>
    <string name="ad_play_next_schedule">Play Next Schedule</string>
    <string name="ad_reboot_app">reboot</string>
    <string name="ad_update_schedule">Update Schedule</string>
    <string name="ad_update_schedule_fail">Request Schedule Fail！</string>
    <string name="add_app">Add Apps</string>
    <string name="add_collect_concel">Unfavorite successful!</string>
    <string name="add_collect_success">Add Favorites Successfully!</string>
    <string name="add_concel">Cancel Chase Drama Success!</string>
    <string name="add_dislike">Dislike</string>
    <string name="add_like">Like</string>
    <string name="add_like_failed">Failed to like</string>
    <string name="add_like_succeed">Like Succeed</string>
    <string name="add_success">New Chase Drama Success!</string>
    <string name="added_dislike">Dislike Added</string>
    <string name="added_like">Like Added</string>
    <string name="adtime_remaining">Time Remaining:</string>
    <string name="advertisement">Advertisement</string>
    <string name="advertising_initializing">Initializing...</string>
    <string name="advertising_space">Open VIP now to enjoy an extra 7-day discount</string>
    <string name="agent_main">100</string>
    <string name="agent_main_bx_186">tv186</string>
    <string name="agent_main_bx_188">tv188</string>
    <string name="agent_main_bx_189">tv189</string>
    <string name="agent_main_bx_190">tv190</string>
    <string name="agent_main_bx_191">tv191</string>
    <string name="agent_main_bx_192">tv192</string>
    <string name="agent_main_bx_193">tv193</string>
    <string name="agent_main_bx_default">100</string>
    <string name="agent_main_newmais_160">tv160</string>
    <string name="agent_main_nexus_120">nxs120</string>
    <string name="agent_main_tv_second">100</string>
    <string name="agent_main_wlt_default" />
    <string name="agent_main_wlt_tv201">tv201</string>
    <string name="agent_main_wlt_tv202">tv202</string>
    <string name="agree_and_accept">Purchase means Agree and Accept</string>
    <string name="agreement_member">Membership Service Agreement</string>
    <string name="ali_pay">Alipay Payment</string>
    <string name="alipay_scan">Alipay Scan Two-dimensional Code to pay easily</string>
    <string name="all">All</string>
    <string name="all_app">All Applications</string>
    <string name="all_list">all listings</string>
    <string name="android_sdk_version">SDK Version</string>
    <string name="android_version">Android Version</string>
    <string name="apk_md5_check_failed">New Version Update Failes，it Will Be Retried Next Time Open The App。</string>
    <string name="app_cloud_desktop">Dolit Cloud Desktop</string>
    <string name="app_dolit_iptv1">Dolit IPTV1</string>
    <string name="app_dolit_iptv2">Dolit IPTV2</string>
    <string name="app_download_task_exist">Tasks Already Exist</string>
    <string name="app_expired_please_update">App expired, please update to latest version~</string>
    <string name="app_high_version_installed">Installed Higher Version</string>
    <string name="app_hospital_iptv">Dolit Hospital IPTV</string>
    <string name="app_hotel_iptv">Dolit Hotel IPTV</string>
    <string name="app_is_downloading">Start to download application:</string>
    <string name="app_media_assets">Dolit Media Assets</string>
    <string name="app_media_assets_palm">Dolit Palm Media Assets</string>
    <string name="app_name">NEXUS</string>
    <string name="app_name_demo1">Demo1</string>
    <string name="app_name_demo2">Demo2</string>
    <string name="app_name_demo3">Demo3</string>
    <string name="app_name_demo4">Demo4</string>
    <string name="app_name_demo5">Demo5</string>
    <string name="app_name_demo6">Demo6</string>
    <string name="app_name_demo7">Demo7</string>
    <string name="app_name_dl1">Dolit1</string>
    <string name="app_name_dl2">Dolit2</string>
    <string name="app_name_dl3">Dolit3</string>
    <string name="app_name_dl4">Dolit4</string>
    <string name="app_name_dl5">Dolit5</string>
    <string name="app_name_dl6">Dolit6</string>
    <string name="app_name_dl7">Dolit7</string>
    <string name="app_name_dolit_ott">Dolit OTT</string>
    <string name="app_name_hongtai">Cloud Desktop</string>
    <string name="app_name_xhw">星河湾半岛酒店</string>
    <string name="app_same_version_installed">Already installed</string>
    <string name="app_store_data_load_error">App store data load failed,Do you want to reload?</string>
    <string name="app_temp_apk_deleted">Temporary packages have been cleaned up</string>
    <string name="app_update_tip_prefix">Download Or Not</string>
    <string name="app_wit_party_building">Dolit Wit Party Building</string>
    <string name="btnReturnHome">Return</string>
    <string name="btn_get_trail">trial</string>
    <string name="current_state">Current Status:</string>
    <string name="equipment_serial_number">Device Number:</string>
    <string name="expire_date">Expiration Date:</string>
    <string name="get_verify_code">Send Code</string>
    <string name="hint_hotel_id">Please enter the hotel number.</string>
    <string name="hint_input_verify_code">Input Verify Code</string>
    <string name="hotel_id">Hotel Number</string>
    <string name="register">Register</string>
    <string name="register_nickname">Nickname;</string>
    <string name="register_please_input_nickname">Please Input Nickname</string>
    <string name="registration_agreement">Registration Agreement</string>
    <string name="registration_tips">Note: E-mail is the only certificate for retrieving the password, be sure to fill in correctly</string>
    <string name="set_check_update">Check for updates</string>
    <string name="setting_system_setting">System Setting</string>
    <string name="settings_macAddress">MAC Address:</string>
    <string name="user_accountName">Account:</string>
    <string name="user_accountNameHint">pls input account</string>
    <string name="user_accountPassword">Password:</string>
    <string name="user_accountPasswordHint">please input password</string>
    <string name="user_confirm_password">Confirm password;</string>
    <string name="user_confirm_password_hint">Please input confirm password again</string>
    <string name="user_forget_pwd">Forget password</string>
    <string name="user_login">Log in</string>
    <string name="user_register_register">Register</string>
    <string name="verification_code">Verification Code</string>
</resources>