<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title_bar_common"/>
    <ImageView
        android:id="@+id/iv_logo"
        android:background="@mipmap/ic_launcher_tv"
        android:layout_width="@dimen/dimen_80dp_sw_320_dp"
        android:layout_height="@dimen/dimen_80dp_sw_320_dp"
        android:layout_marginTop="@dimen/dimen_50dp_sw_320_dp"
        android:layout_below="@+id/rl_main_title_bar_common"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/rl_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp_sw_320_dp"
        android:layout_below="@+id/iv_logo"
        android:layout_marginStart="@dimen/dimen_32dp_sw_320_dp"
        android:layout_marginEnd="@dimen/dimen_32dp_sw_320_dp">
        <TextView
            android:id="@+id/iv_click"
            android:text="@string/user_accountName"
            android:layout_centerVertical="true"
            style="@style/style_register_text"/>
        <EditText
            android:id="@+id/edt_user_name"
            android:hint="@string/user_accountNameHint"
            android:maxLength="18"
            android:inputType="text"
            android:layout_toEndOf="@+id/iv_click"
            style="@style/style_register_edit"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_horizontal_line_1"
        android:layout_below="@+id/rl_user_phone"
        style="@style/style_horizontal_line"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/rl_user_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_horizontal_line_1"
        android:layout_marginStart="@dimen/dimen_32dp_sw_320_dp"
        android:layout_marginEnd="@dimen/dimen_32dp_sw_320_dp">
        <TextView
            android:id="@+id/iv_user_nick"
            android:text="@string/register_nickname"
            android:layout_centerVertical="true"
            style="@style/style_register_text"/>
        <EditText
            android:id="@+id/edt_user_nick"
            android:hint="@string/register_please_input_nickname"
            android:maxLength="18"
            android:inputType="text"
            android:layout_toEndOf="@+id/iv_user_nick"
            style="@style/style_register_edit"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_horizontal_line_2"
        android:layout_below="@+id/rl_user_nick"
        style="@style/style_horizontal_line"/>
    <RelativeLayout
        android:id="@+id/rl_get_v_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_horizontal_line_2"
        android:layout_marginStart="@dimen/dimen_32dp_sw_320_dp"
        android:layout_marginEnd="@dimen/dimen_32dp_sw_320_dp">
        <TextView
            android:id="@+id/tv_verification_code"
            android:text="@string/verification_code"
            android:layout_centerVertical="true"
            style="@style/style_register_text"/>
        <Button
            android:id="@+id/btn_get_code"
            android:text="@string/get_verify_code"
            android:layout_alignParentEnd="true"
            style="@style/style_send_verify_code_btn"/>
        <EditText
            android:id="@+id/edt_verify_code"
            android:layout_width="match_parent"
            android:hint="@string/hint_input_verify_code"
            android:maxLength="40"
            android:inputType="textEmailAddress"
            android:layout_toStartOf="@+id/btn_get_code"
            android:layout_toEndOf="@+id/tv_verification_code"
            style="@style/style_register_edit"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_horizontal_line_3"
        android:layout_below="@+id/rl_get_v_code"
        style="@style/style_horizontal_line"/>
    <RelativeLayout
        android:id="@+id/rl_user_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_horizontal_line_3"
        android:layout_marginStart="@dimen/dimen_32dp_sw_320_dp"
        android:layout_marginEnd="@dimen/dimen_32dp_sw_320_dp">
        <TextView
            android:id="@+id/tv_pwd"
            android:text="@string/user_accountPassword"
            android:layout_centerVertical="true"
            style="@style/style_register_text"/>
        <EditText
            android:id="@+id/edt_pwd"
            android:hint="@string/user_accountPasswordHint"
            android:maxLength="18"
            android:inputType="textPassword"
            android:layout_toEndOf="@+id/tv_pwd"
            style="@style/style_register_edit"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_horizontal_line_4"
        android:layout_below="@+id/rl_user_pwd"
        style="@style/style_horizontal_line"/>
    <RelativeLayout
        android:id="@+id/rl_user_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_horizontal_line_4"
        android:layout_marginStart="@dimen/dimen_32dp_sw_320_dp"
        android:layout_marginEnd="@dimen/dimen_32dp_sw_320_dp">
        <TextView
            android:id="@+id/tv_pwd_again"
            android:text="@string/user_confirm_password"
            android:layout_centerVertical="true"
            style="@style/style_register_text"/>
        <EditText
            android:id="@+id/edt_pwd_again"
            android:hint="@string/user_confirm_password_hint"
            android:maxLength="18"
            android:inputType="textPassword"
            android:layout_toEndOf="@+id/tv_pwd_again"
            style="@style/style_register_edit"/>
    </RelativeLayout>
    <View
        android:id="@+id/view_horizontal_line_5"
        android:layout_below="@+id/rl_user_pwd_again"
        style="@style/style_horizontal_line"/>
    <Button
        android:id="@+id/btn_submit"
        android:text="@string/register"
        android:layout_below="@+id/view_horizontal_line_5"
        style="@style/style_login_btn"/>
    <TextView
        android:textSize="@dimen/dimen_8sp_sw_320_dp"
        android:textColor="@color/theme_red"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/registration_tips"
        android:layout_below="@+id/btn_submit"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="@dimen/dimen_16sp_sw_320_dp"
        android:textColor="@color/theme_red"
        android:id="@+id/tv_register_agreement"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10dp_sw_320_dp"
        android:text="@string/registration_agreement"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
