<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_logo"
        android:background="@mipmap/ic_launcher_tv"
        android:layout_width="@dimen/dimen_80dp_sw_320_dp"
        android:layout_height="@dimen/dimen_80dp_sw_320_dp"
        android:layout_marginTop="@dimen/dimen_96dp_sw_320_dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"/>
    <EditText
        android:id="@+id/edt_user_name"
        android:layout_marginTop="@dimen/dimen_16dp_sw_320_dp"
        android:hint="@string/user_accountNameHint"
        android:maxLength="18"
        android:layout_below="@+id/iv_logo"
        android:inputType="text"
        style="@style/style_login_edit_outer"/>
    <EditText
        android:id="@+id/edt_pwd"
        android:hint="@string/user_accountPasswordHint"
        android:layout_below="@+id/edt_user_name"
        android:inputType="textPassword"
        style="@style/style_login_edit_outer"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/dimen_10dp_sw_320_dp"
        android:text="@string/user_login"
        android:layout_below="@+id/edt_pwd"
        style="@style/style_login_btn"/>
    <View
        android:id="@+id/view_vertical_line_1"
        android:background="@color/gray_dd"
        android:layout_width="1px"
        android:layout_height="@dimen/dimen_12dp_sw_320_dp"
        android:layout_marginTop="@dimen/dimen_20dp_sw_320_dp"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp_sw_320_dp"
        android:text="@string/user_register_register"
        android:layout_below="@+id/btn_login"
        android:layout_toStartOf="@+id/view_vertical_line_1"
        style="@style/style_login_text"/>
    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp_sw_320_dp"
        android:text="@string/user_forget_pwd"
        android:layout_below="@+id/btn_login"
        android:layout_toEndOf="@+id/view_vertical_line_1"
        style="@style/style_login_text"/>
</RelativeLayout>
