<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dimen_36dp_sw_320_dp">
    <RelativeLayout
        android:id="@+id/rl_connect_way"
        android:layout_width="@dimen/dimen_116dp_sw_320_dp"
        android:layout_height="@dimen/dimen_160dp_sw_320_dp"
        android:layout_marginTop="@dimen/dimen_24dp_sw_320_dp"
        android:layout_marginStart="@dimen/dimen_22dp_sw_320_dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true">
        <TextView
            android:textSize="@dimen/settingClearCache_normalFontSize"
            android:textColorLink="@color/white"
            android:autoLink="phone"
            android:id="@+id/tv_contact_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:singleLine="false"
            style="@style/style_text_view_setting_fragment"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_left_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_24dp_sw_320_dp"
        android:layout_toStartOf="@+id/rl_connect_way">
        <LinearLayout
            android:id="@+id/ll_account_wrapper"
            style="@style/style_layout_setting_options">
            <TextView
                android:id="@+id/tv_lbl_user_name"
                android:text="@string/user_accountName"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <EditText
                android:id="@+id/edt_auth_user_name"
                android:nextFocusRight="@+id/edt_auth_password"
                android:nextFocusDown="@+id/edt_auth_password"
                android:hint="@string/user_accountNameHint"
                android:maxLength="30"
                android:inputType="text"
                style="@style/style_edit_text_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_password_wrapper"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/user_accountPassword"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <EditText
                android:id="@+id/edt_auth_password"
                android:nextFocusLeft="@+id/edt_auth_user_name"
                android:nextFocusUp="@+id/edt_auth_user_name"
                android:nextFocusDown="@+id/btn_active"
                android:hint="@string/user_accountPasswordHint"
                android:maxLength="16"
                android:inputType="textPassword"
                style="@style/style_edit_text_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_hotel_num"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/hotel_id"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <EditText
                android:id="@+id/edt_hotel_id"
                android:nextFocusUp="@+id/edt_auth_password"
                android:nextFocusDown="@+id/btn_active"
                android:hint="@string/hint_hotel_id"
                android:maxLength="30"
                android:inputType="text"
                style="@style/style_edit_text_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_device_number_wrapper"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/equipment_serial_number"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <TextView
                android:ellipsize="middle"
                android:id="@+id/tv_mac_hash_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginStart="@dimen/dimen_10dp_sw_320_dp"
                style="@style/style_text_view_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_active_time"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/activation_date"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <TextView
                android:ellipsize="marquee"
                android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:singleLine="true"
                android:layout_marginStart="@dimen/dimen_10dp_sw_320_dp"
                style="@style/style_text_view_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_expire_wrapper"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/expire_date"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <TextView
                android:ellipsize="marquee"
                android:id="@+id/tv_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:singleLine="true"
                android:layout_marginStart="@dimen/dimen_10dp_sw_320_dp"
                style="@style/style_text_view_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rl_current_status_wrapper"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/current_state"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <TextView
                android:ellipsize="marquee"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:layout_marginStart="@dimen/dimen_10dp_sw_320_dp"
                style="@style/style_text_view_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_mac_address"
            style="@style/style_layout_setting_options">
            <TextView
                android:text="@string/settings_macAddress"
                style="@style/style_text_view_setting_fragment_subtitle"/>
            <TextView
                android:ellipsize="marquee"
                android:id="@+id/tv_mac_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:layout_marginStart="@dimen/dimen_10dp_sw_320_dp"
                style="@style/style_text_view_setting_fragment"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/ll_button_wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:textSize="@dimen/dimen_8sp_sw_320_dp"
                android:id="@+id/btn_active"
                android:nextFocusLeft="@+id/edt_auth_password"
                android:nextFocusUp="@+id/edt_auth_password"
                android:layout_width="@dimen/dimen_80dp_sw_320_dp"
                android:layout_height="@dimen/dimen_27dp_sw_320_dp"
                android:layout_margin="@dimen/dimen_7dp_sw_320_dp"
                android:layout_marginLeft="@dimen/settingActive_item_marginLeftRight"
                android:layout_marginRight="@dimen/settingActive_item_marginLeftRight"
                android:text="@string/access_authentication_information"
                android:singleLine="true"
                style="@style/style_button_setting_fragment"/>
            <Button
                android:textSize="@dimen/dimen_8sp_sw_320_dp"
                android:id="@+id/btn_return"
                android:visibility="gone"
                android:nextFocusUp="@+id/edt_auth_password"
                android:layout_width="@dimen/dimen_60dp_sw_320_dp"
                android:layout_height="@dimen/dimen_27dp_sw_320_dp"
                android:layout_margin="@dimen/dimen_7dp_sw_320_dp"
                android:layout_marginLeft="@dimen/settingActive_item_marginLeftRight"
                android:layout_marginRight="@dimen/settingActive_item_marginLeftRight"
                android:text="@string/btnReturnHome"
                style="@style/style_button_setting_fragment"/>
            <Button
                android:textSize="@dimen/dimen_8sp_sw_320_dp"
                android:id="@+id/btn_trial"
                android:nextFocusRight="@+id/btn_trial"
                android:nextFocusUp="@+id/edt_auth_password"
                android:layout_width="@dimen/dimen_60dp_sw_320_dp"
                android:layout_height="@dimen/dimen_27dp_sw_320_dp"
                android:layout_margin="@dimen/dimen_7dp_sw_320_dp"
                android:text="@string/btn_get_trail"
                style="@style/style_button_setting_fragment"/>
            <Button
                android:textSize="@dimen/dimen_8sp_sw_320_dp"
                android:id="@+id/btn_system_setting"
                android:visibility="gone"
                android:nextFocusRight="@+id/btn_system_setting"
                android:nextFocusUp="@+id/btn_trial"
                android:layout_width="@dimen/dimen_60dp_sw_320_dp"
                android:layout_height="@dimen/dimen_27dp_sw_320_dp"
                android:layout_margin="@dimen/dimen_7dp_sw_320_dp"
                android:text="@string/setting_system_setting"
                style="@style/style_button_setting_fragment"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_right_bottom_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:textSize="@dimen/dimen_6sp_sw_320_dp"
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_6dp_sw_320_dp"
            android:alpha="0.1"
            style="@style/style_text_view_setting_fragment_subtitle"/>
        <TextView
            android:textSize="@dimen/dimen_6sp_sw_320_dp"
            android:id="@+id/tv_device_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_6dp_sw_320_dp"
            android:alpha="0.1"
            style="@style/style_text_view_setting_fragment_subtitle"/>
        <Button
            android:textSize="@dimen/setAbout_normalFontSize"
            android:id="@+id/btn_check_update"
            android:paddingLeft="@dimen/dimen_6dp_sw_320_dp"
            android:paddingTop="@dimen/dimen_4dp_sw_320_dp"
            android:paddingRight="@dimen/dimen_6dp_sw_320_dp"
            android:paddingBottom="@dimen/dimen_4dp_sw_320_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_check_update"
            style="?attr/styleSettingButton"/>
    </LinearLayout>
</RelativeLayout>
